Prettify files, untrack build dir

--- a/index.html
+++ b/index.html
@@ -239,11 +239,21 @@
       <div class="section-head center-head">More Projects</div>
 
       <div class="row center proj-buttons">
-          <div class="btn-proj btn-proj-selected" id="proj-all"><div class="content">All</div></div>
-          <span class="btn-proj" id="proj-web"><div class="content">Websites</div></span>
-          <span class="btn-proj" id="proj-game"><div class="content">Games</div></span>
-          <span class="btn-proj" id="proj-app"><div class="content">Apps</div></span>
-          <span class="btn-proj" id="proj-other"><div class="content">Other</div></span>
+        <div class="btn-proj btn-proj-selected" id="proj-all">
+          <div class="content">All</div>
+        </div>
+        <span class="btn-proj" id="proj-web">
+          <div class="content">Websites</div>
+        </span>
+        <span class="btn-proj" id="proj-game">
+          <div class="content">Games</div>
+        </span>
+        <span class="btn-proj" id="proj-app">
+          <div class="content">Apps</div>
+        </span>
+        <span class="btn-proj" id="proj-other">
+          <div class="content">Other</div>
+        </span>
       </div>
 
       <div class="row proj-cards">
@@ -274,7 +284,7 @@
               </div>
             </div>
           </div>
-        <!-- END COL6 -->
+          <!-- END COL6 -->
         </div>
 
         <div class="col-6">
@@ -304,9 +314,9 @@
               </div>
             </div>
           </div>
-        <!-- END COL6 -->
+          <!-- END COL6 -->
         </div>
-      <!-- END ROW -->
+        <!-- END ROW -->
       </div>
 
     </div>
