Update head metas

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>Ben Cuan | Software Developer</title>
+  <meta name="description" content="Hi! I'm Ben, and this is my site :)">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Ben Cuan | Software Developer">
+  <meta property="og:description" content="Hi! I'm Ben, and this is my site :)">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://bencuan.me">
+  <meta property="og:image" content="img/icon.png">
+  <meta property="og:site_name" content="bencuan.me">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="img/icon.png">
