--- a/index.html
+++ b/index.html
@@ -258,67 +258,82 @@
         </span>
       </div>
 
-      <div class="row proj-cards">
-        <div class="col-6">
+      <!-- START PROJECT CARDS -->
+      <div class="truncated" id="proj-cards">
 
-          <div class="content-box proj-card proj-other">
-            <div class="content">
+        <!-- START ROW 1 -->
+        <div class="row">
 
-              <div class="proj-name">Dotfiles</div>
-              <div class="center">
-                <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
-                  <i class="fas fa-external-link-square-alt"></i>
-                </span>
-              </div>
-              <div class="proj-desc">A collection of personalized Linux configurations</div>
-              <div class="proj-icons">
-                <div class="proj-icon">
-                  <i class="fab fa-github"></i>
-                  <div class="icon-label">Test</div>
+          <!-- START COL-6 -->
+          <div class="col-6">
+
+            <div class="content-box proj-card proj-other">
+              <div class="content">
+
+                <div class="proj-name">Dotfiles</div>
+                <div class="center">
+                  <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+                    <i class="fas fa-external-link-square-alt"></i>
+                  </span>
                 </div>
-                <div class="proj-icon">
-                  <i class="fab fa-github"></i>
-                  <div class="icon-label">Test</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- END COL6 -->
-        </div>
-
-        <div class="col-6">
-
-          <div class="content-box proj-card proj-other">
-            <div class="content">
-
-              <div class="proj-name"><img src="img/dotfiles.png"></div>
-              <div class="center">
-                <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
-                  <i class="fas fa-external-link-square-alt"></i>
-                </span>
-              </div>
-              <div class="proj-desc">A collection of personalized Linux configurations</div>
-              <div class="proj-icons">
-                <div class="proj-icon">
-                  <i class="fab fa-github"></i>
-                  <div class="icon-label">Test</div>
-                </div>
-                <div class="proj-icon">
-                  <i class="fab fa-github"></i>
-                  <div class="icon-label">Test</div>
+                <div class="proj-desc">A collection of personalized Linux configurations</div>
+                <div class="proj-icons">
+                  <div class="proj-icon">
+                    <i class="fab fa-github"></i>
+                    <div class="icon-label">Test</div>
+                  </div>
+                  <div class="proj-icon">
+                    <i class="fab fa-github"></i>
+                    <div class="icon-label">Test</div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <!-- END COL6 -->
+
+          <div class="col-6">
+
+            <div class="content-box proj-card proj-other">
+              <div class="content">
+
+                <div class="proj-name"><img src="img/dotfiles.png"></div>
+                <div class="center">
+                  <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span class="feature-link proj-link" onclick="openInNewTab('https://github.com/64bitpandas')">
+                    <i class="fas fa-external-link-square-alt"></i>
+                  </span>
+                </div>
+                <div class="proj-desc">A collection of personalized Linux configurations</div>
+                <div class="proj-icons">
+                  <div class="proj-icon">
+                    <i class="fab fa-github"></i>
+                    <div class="icon-label">Test</div>
+                  </div>
+                  <div class="proj-icon">
+                    <i class="fab fa-github"></i>
+                    <div class="icon-label">Test</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- END COL6 -->
+          </div>
         </div>
-        <!-- END ROW -->
+        <!-- END ROW 1 -->
+
+      </div>
+      <!-- END PROJECT CARDS -->
+
+      <div class="row center">
+        <div id="more-proj-btn" class="btn-proj center" onclick="toggleMoreProjects()">
+          <div class="content">View More</div>
+        </div>
       </div>
 
     </div>
