Contact and footer

--- a/index.html
+++ b/index.html
@@ -338,9 +338,32 @@
 
     </div>
     <!-- END PROJECTS -->
+
+
+    <!-- START CONTACT -->
+    <div id="contact" class="container content-section center">
+      <div class="section-head center-head">Contact Me</div>
+      <div class="contact-text center">
+        Thanks for taking a look at my site! If there's anything (literally anything) you'd like to
+        talk to me about, feel free to send an email to <a class="link" href="mailto:contact@bencuan.me">contact@bencuan.me</a>.
+      </div>
+      <div class="btn-proj btn-contact" onclick="openInNewTab('mailto:contact@bencuan.me')">
+        <div class="content">Email me!</div>
+      </div>
+      <div class="contact-text center">
+        I'm currently looking for Summer 2021 internships in the SF Bay Area.
+        If you know of any opportunities, I'd love to hear about them!
+      </div>
+    </div>
   </div>
-  <!-- END CONTENT -->
-  </div>
+</div>
+<!-- END CONTENT -->
+
+<footer id="footer">
+  <div class="footer-text center">Designed and developed with ❤️ by Ben Cuan, July 2020</div>
+  <div class="footer-text center"><a class="link" target="_blank" href="https://github.com/64bitpandas/bencuan.me">Download the source at <i class="fab fa-github footer-icon"></i> !</a></div>
+  <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a></div>
+</footer>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
