Clean up navbar, better nav colors

--- a/index.html
+++ b/index.html
@@ -31,20 +31,16 @@
   <nav>
     <div class="nav-background"></div>
     <div id="nav-fill-home" class="nav-fill logo-color"></div>
-    <div id="nav-fill-about" class="nav-fill itch"></div>
-    <div id="nav-fill-exp" class="nav-fill email"></div>
-    <div id="nav-fill-proj" class="nav-fill linkedin"></div>
-    <div id="nav-fill-contact" class="nav-fill github"></div>
+    <div id="nav-fill-about" class="nav-fill about-color"></div>
+    <div id="nav-fill-proj" class="nav-fill proj-color"></div>
+    <div id="nav-fill-contact" class="nav-fill contact-color"></div>
     <div id="nav-fill-resume" class="nav-fill resume"></div>
     <div class="row">
       <div class="col-1">
-        <a href="#" id="nav-home"><img src="img/icon.png"></a>
+        <a href="#" id="nav-home"><img src="img/icon-no-bg.png"></a>
       </div>
       <div class="col-2">
         <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i> About</a>
-      </div>
-      <div class="col-2">
-        <a href="#experience" id="nav-exp"><i class="fas fa-info-circle"></i> Experience</a>
       </div>
       <div class="col-2">
         <a href="#projects" id="nav-proj"><i class="fas fa-info-circle"></i> Projects</a>
@@ -52,6 +48,7 @@
       <div class="col-2">
         <a href="#contact" id="nav-contact"><i class="fas fa-info-circle"></i> Contact</a>
       </div>
+      <div class="col-2"></div>
       <div class="col-3">
         <a href="/resume" id="nav-resume"><i class="fas fa-info-circle"></i> Resume</a>
       </div>
@@ -366,6 +363,7 @@
 </footer>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://kit.fontawesome.com/585da7c89d.js" crossorigin="anonymous"></script>
+  <script src="js/vendor/noframework.waypoints.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 </body>
