Navbar waypoint animations

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <nav>
-    <div class="nav-background"></div>
+    <div class="nav-background" id="nav-back"></div>
     <div id="nav-fill-home" class="nav-fill logo-color"></div>
     <div id="nav-fill-about" class="nav-fill about-color"></div>
     <div id="nav-fill-proj" class="nav-fill proj-color"></div>
@@ -58,7 +58,7 @@
   <!-- START LANDING -->
   <div id="landing">
     <div class="splash-gradient">
-      <div class="splash-box">
+      <div class="splash-box" id="landing-box">
         <div class="splash-hi">Hi! I'm</div>
         <div class="splash-name">Ben Cuan.</div>
         <div class="splash-desc">I'm a software developer and game designer.</div>
