Improve navbar elements

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
         <a href="#" id="nav-home"><img src="img/icon-no-bg.png"></a>
       </div>
       <div class="col-2">
-        <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i> About</a>
+        <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i>  About</a>
       </div>
       <div class="col-2">
-        <a href="#projects" id="nav-proj"><i class="fas fa-info-circle"></i> Projects</a>
+        <a href="#projects" id="nav-proj"><i class="fas fa-paint-roller"></i>  Projects</a>
       </div>
       <div class="col-2">
-        <a href="#contact" id="nav-contact"><i class="fas fa-info-circle"></i> Contact</a>
+        <a href="#contact" id="nav-contact"><i class="fas fa-mobile"></i>  Contact</a>
       </div>
       <div class="col-2"></div>
       <div class="col-3">
-        <a href="/resume" id="nav-resume"><i class="fas fa-info-circle"></i> Resume</a>
+        <a href="/resume" id="nav-resume" class="resume-button"> Resume </a>
       </div>
     </div>
   </nav>
