Burger menu for mobile

--- a/index.html
+++ b/index.html
@@ -53,10 +53,18 @@
         <a href="/resume" id="nav-resume" class="resume-button"> Resume </a>
       </div>
     </div>
-    <div class="mobile-only">
-      <div class="burger burger-rotate">
+    <div class="mobile-only row">
+      <a href="#" id="mobile-nav-home"><img src="img/icon-no-bg.png"></a>
+      <div id="burger-btn" class="burger burger-rotate">
         <div class="burger-lines"></div>
       </div>
+    </div>
+
+    <div class="mobile-only logo-color" id="burger-menu">
+        <a href="#about" id="mobile-nav-about" class="burger-link" ><i class="fas fa-info-circle"></i>  About</a>
+        <a href="#projects" id="mobile-nav-proj" class="burger-link"><i class="fas fa-paint-roller"></i>  Projects</a>
+        <a href="#contact" id="mobile-nav-contact" class="burger-link"><i class="fas fa-mobile"></i>  Contact</a>
+        <a href="/resume" id="mobile-nav-resume" class="burger-link" ><i class="fas fa-file-pdf"></i>  Resume </a>
     </div>
   </nav>
 
