mobile/tablet splash buttons

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
   <div id="landing">
     <div class="splash-gradient">
       <div class="splash-box" id="landing-box">
-        <div class="splash-hi">Hi! I'm</div>
-        <div class="splash-name">Ben Cuan.</div>
-        <div class="splash-desc">I'm a software developer and game designer.</div>
+        <div class="splash-hi mobile-center">Hi! I'm</div>
+        <div class="splash-name mobile-center">Ben Cuan.</div>
+        <div class="splash-desc mobile-center">I'm a software developer and game designer.</div>
         <div class="splash-button-container row no-mobile">
           <div class="col-1"></div>
           <div class="col-2 splash-button-col">
@@ -104,6 +104,35 @@
             </div>
           </div>
           <div class="col-1"></div>
+        </div>
+
+        <div class="mobile-splash-buttons center">
+          <div class="row">
+            <div class="mobile-landing-btn github" onclick="openInNewTab('https://github.com/64bitpandas')">
+              <i class="fab fa-github"></i>  GitHub
+            </div>
+          </div>
+          <div class="row">
+            <div class="mobile-landing-btn linkedin" id="linkedin-btn"
+              onclick="openInNewTab('https://linkedin.com/in/bencuan')">
+              <i class="fab fa-linkedin-in"></i> LinkedIn
+            </div>
+          </div>
+          <div class="row">
+           <div class="mobile-landing-btn resume" id="resume-btn" onclick="openInNewTab('https://bencuan.me/resume')">
+              <i class="fas fa-file-pdf"></i>  Resume
+            </div>
+          </div>
+          <div class="row">
+            <div class="mobile-landing-btn email" id="email-btn" onclick="openInNewTab('mailto:contact@bencuan.me')">
+              <i class="fas fa-envelope-open-text"></i>  Email
+            </div>
+          </div>
+          <div class="row">
+           <div class="mobile-landing-btn itch" id="itch-btn" onclick="openInNewTab('https://64bitpandas.itch.io')">
+              <i class="fab fa-itch-io"></i>  Itch.io
+            </div>
+          </div>
         </div>
 
         <div class="github splash-info" id="github-splash">
