Fix smooth scroll

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="nav-fill-resume" class="nav-fill resume"></div>
     <div class="row no-mobile">
       <div class="col-1">
-        <a href="#" id="nav-home"><img src="img/icon-no-bg.png"></a>
+        <a href="#landing" id="nav-home"><img src="img/icon-no-bg.png"></a>
       </div>
       <div class="col-2">
         <a href="#about" id="nav-about"><i class="fas fa-info-circle"></i>  About</a>
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="mobile-only row">
-      <a href="#" id="mobile-nav-home"><img src="img/icon-no-bg.png"></a>
+      <a href="#landing" id="mobile-nav-home"><img src="img/icon-no-bg.png"></a>
       <div id="burger-btn" class="burger burger-rotate">
         <div class="burger-lines"></div>
       </div>
