Make all project cards the same height

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
 <footer id="footer">
   <div class="footer-text center">Designed and developed with ❤️ by Ben Cuan, July 2020</div>
-  <div class="footer-text center"><a class="link" target="_blank" href="https://github.com/64bitpandas/bencuan.me">Download the source at <i class="fab fa-github footer-icon"></i> !</a></div>
+  <div class="footer-text center"><a class="link" target="_blank" href="https://github.com/64bitpandas/bencuan.me">Browse the source at <i class="fab fa-github footer-icon"></i> !</a></div>
   <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a></div>
 </footer>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
