--- a/static/fontcustom/fontcustom-preview.html
+++ b/static/fontcustom/fontcustom-preview.html
@@ -141,12 +141,12 @@
 
       @font-face {
   font-family: "fontcustom";
-  src: url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.eot");
-  src: url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.eot?#iefix") format("embedded-opentype"),
-       url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.woff2") format("woff2"),
-       url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.woff") format("woff"),
-       url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.ttf") format("truetype"),
-       url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.svg#fontcustom") format("svg");
+  src: url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.eot");
+  src: url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.eot?#iefix") format("embedded-opentype"),
+       url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.woff2") format("woff2"),
+       url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.woff") format("woff"),
+       url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.ttf") format("truetype"),
+       url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -154,7 +154,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "fontcustom";
-    src: url("./fontcustom_81eada93870a42dbfc3ee7dc64b1e560.svg#fontcustom") format("svg");
+    src: url("./fontcustom_71a4a7c98a3dcf7289509dd1ce0bba40.svg#fontcustom") format("svg");
   }
 }
 
@@ -174,6 +174,7 @@
 .icon-googlecardboard:before,
 .icon-jquery:before,
 .icon-linux:before,
+.icon-max:before,
 .icon-oculus:before,
 .icon-spotify:before,
 .icon-ubuntu:before {
@@ -204,6 +205,7 @@
 .icon-googlecardboard:before { content: "\f10a"; }
 .icon-jquery:before { content: "\f10c"; }
 .icon-linux:before { content: "\f102"; }
+.icon-max:before { content: "\f111"; }
 .icon-oculus:before { content: "\f10e"; }
 .icon-spotify:before { content: "\f10b"; }
 .icon-ubuntu:before { content: "\f103"; }
@@ -222,7 +224,7 @@
   <body class="characters-off">
     <div id="page" class="container">
       <header>
-        <h1>fontcustom contains 16 glyphs:</h1>
+        <h1>fontcustom contains 17 glyphs:</h1>
         <a onclick="toggleCharacters(); return false;" href="#">Toggle Preview Characters</a>
       </header>
 
@@ -393,6 +395,19 @@
         <div class="usage">
           <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-linux" />
           <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf102;" />
+        </div>
+      </div>
+      
+      <div class="glyph">
+        <div class="preview-glyphs">
+          <span class="step size-12"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-14"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-16"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-18"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-21"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-24"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-36"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-48"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-60"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span><span class="step size-72"><span class="letters">Pp</span><i id="icon-max" class="icon-max"></i></span>
+        </div>
+        <div class="preview-scale">
+          <span class="step">12</span><span class="step">14</span><span class="step">16</span><span class="step">18</span><span class="step">21</span><span class="step">24</span><span class="step">36</span><span class="step">48</span><span class="step">60</span><span class="step">72</span>
+        </div>
+        <div class="usage">
+          <input class="class" type="text" readonly="readonly" onClick="this.select();" value=".icon-max" />
+          <input class="point" type="text" readonly="readonly" onClick="this.select();" value="&amp;#xf111;" />
         </div>
       </div>
       
